--- a/styles.css
+++ b/styles.css
@@ -33,9 +33,6 @@ header {
 
 main {
   flex: auto;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 footer {
@@ -43,7 +40,6 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: Arial, Helvetica, sans-serif;
   background-color: var(--footer-color);
   caret-color: transparent;
 }
@@ -128,7 +124,8 @@ input[type="color"]::-webkit-color-swatch {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 150px;
+  padding-top: 150px;
+  padding-bottom: 100px;
 }
 
 .grid {
@@ -138,6 +135,7 @@ input[type="color"]::-webkit-color-swatch {
   background-color: var(--background-color);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   caret-color: transparent;
+  flex-shrink: 0;
 }
 
 .grid-element {
@@ -155,6 +153,7 @@ input[type="color"]::-webkit-color-swatch {
   gap: 30px;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .slider-and-value {
