--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,9 @@ header {
 
 main {
   flex: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 footer {
@@ -51,7 +54,7 @@ footer {
 
 button,
 input {
-  width: 250px;
+  width: 200px;
   height: 50px;
   font-size: 24px;
   background-color: var(--background-color);
@@ -106,7 +109,7 @@ input[type="color"]::-webkit-color-swatch {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 100px;
+  /* margin: 100px; */
 }
 
 .grid {
@@ -135,7 +138,7 @@ input[type="color"]::-webkit-color-swatch {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  margin-bottom: 25px;
+  /* margin-bottom: 25px; */
 }
 
 .slider-and-value {
