--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ footer {
 
 button,
 input {
-  width: 200px;
+  width: 250px;
   height: 50px;
   font-size: 24px;
   background-color: var(--background-color);
@@ -138,7 +138,7 @@ input[type="color"]::-webkit-color-swatch {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  /* margin-bottom: 25px; */
+  padding-bottom: 25px;
 }
 
 .slider-and-value {
