--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,7 @@ input[type="color"]::-webkit-color-swatch {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  padding-top: 25px;
   padding-bottom: 25px;
 }
 
